allow nullable authr_id
