# src/app/Http/Requests/CreateModRequest.php
@@ -16,7 +16,7 @@ class CreateModRequest extends FormRequest
         return [
             "name" => "required|max:255|unique:mods,name",
             "description" => "required",
-            "author_id" => "required|exists:author,id",
+            //"author_id" => "required|exists:author,id",
             "major_version" => "required", //something for integer required...
             "minor_version" => "required", //something for integer required...
             "patch_version" => "required", //something for integer required...
